k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: campuseats
  labels:
    app.kubernetes.io/part-of: campuseats
